auto grad node children are primitive doubles now